# keep_coding

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml  experiment_python_functions.yaml
data/: train.jsonl  valid.jsonl
results/: LEARNINGS.md  python_functions_base_qwen3_latest.json  python_functions_base_qwen3_repeat3.json  python_functions_comparison_latest.json  python_functions_tuned_b3bee_latest.json  python_functions_tuned_b3bee_repeat3.json
scripts/: run_aider_benchmark_stub.py  run_aider_refactor_mini.py  run_livecodebench_mini.py  run_livecodebench_stub.py  run_python_functions_benchmark.py  setup_benchmarks.sh
src/pioneer_adaptive/: __init__.py  adaptive_loop.py  benchmarking.py  cli.py  config.py  pioneer_client.py
tests/: test_benchmarking.py
